--- a/index.html
+++ b/index.html
@@ -8,7 +8,18 @@
       rel="stylesheet"
       href="https://blinkit.com/vendor.88663f49be6745f3cdee.css"
     />
-    <title>Vite + React + TS</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,500..900;1,500..900&display=swap"
+      rel="stylesheet"
+    />
+    <title>blinkIt</title>
+    <style>
+      body {
+        font-family: "Montserrat", sans-serif;
+      }
+    </style>
   </head>
   <body>
     <div id="root"></div>
